cmake_minimum_required(VERSION 2.8)
 
project(lassy)
 
find_package(ITK REQUIRED)
find_package(VTK REQUIRED)

include(${ITK_USE_FILE})
include(${VTK_USE_FILE})

SET(LASSY_INCLUDES
	"./lassy++/include/"
)

add_subdirectory(lassy++/src) 
include_directories(${LASSY_INCLUDES})
add_executable(lassy main.cxx)
add_executable(twall applications/wallthickness.cxx)
add_executable(surf applications/surf.cxx)
add_executable(surfvtk applications/surfvtk.cxx)
add_executable(shellshell applications/shellshell.cxx)
add_executable(shellenclosethickness applications/shellenclosethickness.cxx)
add_executable(target2source applications/target2source.cxx)
#add_executable(shell2csv applications/shell2csv.cxx)
add_executable(displacement applications/displacement.cxx)
add_executable(boolmask applications/boolmask.cxx)
add_executable(shellextractarray applications/shellextractarray.cxx)
add_executable(createprobatlas  applications/createprobatlas.cxx)
add_executable(shellstats  applications/shellstats.cxx)
add_executable(shelldeform  applications/shelldeform.cxx)


target_link_libraries(lassy lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(twall lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(surf lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(surfvtk lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(shellshell lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(shellenclosethickness lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(target2source lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
#target_link_libraries(shell2csv lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(displacement lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(boolmask lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(shellextractarray lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(createprobatlas lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(shellstats lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(shelldeform lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})

if (UNIX)
INSTALL(TARGETS lassy DESTINATION /usr/local/bin)
INSTALL(TARGETS twall DESTINATION /usr/local/bin)
INSTALL(TARGETS surf DESTINATION /usr/local/bin)
INSTALL(TARGETS surfvtk DESTINATION /usr/local/bin)
INSTALL(TARGETS shellshell DESTINATION /usr/local/bin)
INSTALL(TARGETS shellenclosethickness DESTINATION /usr/local/bin)
INSTALL(TARGETS target2source DESTINATION /usr/local/bin)
#INSTALL(TARGETS shell2csv DESTINATION /usr/local/bin)
INSTALL(TARGETS displacement DESTINATION /usr/local/bin)
INSTALL(TARGETS boolmask DESTINATION /usr/local/bin)
INSTALL(TARGETS shellextractarray DESTINATION /usr/local/bin)
INSTALL(TARGETS createprobatlas DESTINATION /usr/local/bin)
INSTALL(TARGETS shellstats DESTINATION /usr/local/bin)
INSTALL(TARGETS shelldeform DESTINATION /usr/local/bin)
endif (UNIX)
