cmake_minimum_required(VERSION 2.8)
 
project(lassy)
 
find_package(ITK REQUIRED)
find_package(VTK REQUIRED)

include(${ITK_USE_FILE})
include(${VTK_USE_FILE})

SET(LASSY_INCLUDES
	"./lassy++/include/"
)

add_subdirectory(lassy++/src) 
include_directories(${LASSY_INCLUDES})
add_executable(lassy main.cxx)
add_executable(twall applications/wallthickness.cxx)
add_executable(surf applications/surf.cxx)
add_executable(surfvtk applications/surfvtk.cxx)
add_executable(shellshell applications/shellshell.cxx)
add_executable(shellenclosethickness applications/shellenclosethickness.cxx)
add_executable(target2source applications/target2source.cxx)
#add_executable(shell2csv applications/shell2csv.cxx)
add_executable(displacement applications/displacement.cxx)
add_executable(boolmask applications/boolmask.cxx)
add_executable(shellextractarray applications/shellextractarray.cxx)
add_executable(createprobatlas  applications/createprobatlas.cxx)
add_executable(shellstats  applications/shellstats.cxx)
add_executable(imagefeature  applications/imagefeature.cxx)
add_executable(shellscaler  applications/shellscaler.cxx)
add_executable(maskshell  applications/maskshell.cxx)
add_executable(createbinaryimage  applications/createbinaryimage.cxx)
add_executable(csvshell  applications/csvshell.cxx)
add_executable(combshell  applications/combshell.cxx)
add_executable(contourbinaryimage  applications/contourbinaryimage.cxx)
add_executable(imagemarker  applications/imagemarker.cxx)
add_executable(csv2vtk  applications/csv2vtk.cxx)
add_executable(vtk2csv  applications/vtk2csv.cxx)
add_executable(csv2img  applications/csv2img.cxx)
add_executable(inpaintmask  applications/inpaintmask.cxx)
add_executable(gapfill  applications/gapfill.cxx)

if(APPLE)
	add_executable(encirclement MACOSX_BUNDLE applications/encirclement.cxx)
elseif(UNIX)
	add_executable(encirclement applications/encirclement.cxx)
elseif(WIN32)
	add_executable(encirclement applications/encirclement.cxx)
endif()

target_link_libraries(lassy lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(twall lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(surf lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(surfvtk lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(shellshell lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(shellenclosethickness lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(target2source lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
#target_link_libraries(shell2csv lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(displacement lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(boolmask lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(shellextractarray lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(createprobatlas lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(shellstats lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(encirclement lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(imagefeature lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(shellscaler lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(maskshell lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(createbinaryimage lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(csvshell lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(combshell lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(contourbinaryimage lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(imagemarker lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(csv2vtk lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(vtk2csv lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(csv2img lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(inpaintmask lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
target_link_libraries(gapfill lassy++ ${ITK_LIBRARIES} ${VTK_LIBRARIES})
if (UNIX)
INSTALL(TARGETS lassy DESTINATION /usr/local/bin)
INSTALL(TARGETS twall DESTINATION /usr/local/bin)
INSTALL(TARGETS surf DESTINATION /usr/local/bin)
INSTALL(TARGETS surfvtk DESTINATION /usr/local/bin)
INSTALL(TARGETS shellshell DESTINATION /usr/local/bin)
INSTALL(TARGETS shellenclosethickness DESTINATION /usr/local/bin)
INSTALL(TARGETS target2source DESTINATION /usr/local/bin)
#INSTALL(TARGETS shell2csv DESTINATION /usr/local/bin)
INSTALL(TARGETS displacement DESTINATION /usr/local/bin)
INSTALL(TARGETS boolmask DESTINATION /usr/local/bin)
INSTALL(TARGETS shellextractarray DESTINATION /usr/local/bin)
INSTALL(TARGETS createprobatlas DESTINATION /usr/local/bin)
INSTALL(TARGETS shellstats DESTINATION /usr/local/bin)
INSTALL(TARGETS encirclement DESTINATION /usr/local/bin)
INSTALL(TARGETS imagefeature DESTINATION /usr/local/bin)
INSTALL(TARGETS shellscaler DESTINATION /usr/local/bin)
INSTALL(TARGETS maskshell DESTINATION /usr/local/bin)
INSTALL(TARGETS createbinaryimage DESTINATION /usr/local/bin)
INSTALL(TARGETS csvshell DESTINATION /usr/local/bin)
INSTALL(TARGETS combshell DESTINATION /usr/local/bin)
INSTALL(TARGETS contourbinaryimage DESTINATION /usr/local/bin)
INSTALL(TARGETS imagemarker DESTINATION /usr/local/bin)
INSTALL(TARGETS csv2vtk DESTINATION /usr/local/bin)
INSTALL(TARGETS vtk2csv DESTINATION /usr/local/bin)
INSTALL(TARGETS csv2img DESTINATION /usr/local/bin)
INSTALL(TARGETS inpaintmask DESTINATION /usr/local/bin)
INSTALL(TARGETS gapfill DESTINATION /usr/local/bin)
endif (UNIX)
